feat: 심화 요구 사항
- 관심사 분리를 통한 레이어 간 의존성 주입
- Basic*Service 구현체 활용 테스트